[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulk-carousel-copy-generator"
version = "0.1.0"
description = "MCP server that generates bulk TikTok carousel copy from five category topics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
bulk-carousel-copy-generator = "server:main"

[tool.setuptools]
py-modules = ["server"]
